--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-server.port=8888
-
-spring.redis.database=7
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=
+spring.profiles.active=prod
