--- a/pom.xml
+++ b/pom.xml
@@ -22,33 +22,28 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>net.lightbody.bmp</groupId>
 			<artifactId>browsermob-core</artifactId>
 			<version>2.1.5</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- existing LittleProxy dependency -->
-		<dependency>
-			<groupId>org.littleshoot</groupId>
-			<artifactId>littleproxy</artifactId>
-			<version>1.1.2</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.littleshoot</groupId> <artifactId>littleproxy</artifactId> 
+			<version>1.1.2</version> </dependency> -->
 		<!-- new dependency on the MITM module -->
-		<dependency>
-			<groupId>net.lightbody.bmp</groupId>
-			<artifactId>mitm</artifactId>
-			<version>2.1.4</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
-		<!-- <dependency> <groupId>org.bouncycastle</groupId> <artifactId>bcprov-jdk15on</artifactId> 
-			<version>1.58</version> </dependency> -->
-
-		<!-- <dependency> <groupId>org.bouncycastle</groupId> <artifactId>bcprov-jdk16</artifactId> 
-			<version>1.46</version> </dependency> -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
-		</dependency>
+		<!-- <dependency> <groupId>net.lightbody.bmp</groupId> <artifactId>mitm</artifactId> 
+			<version>2.1.4</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
@@ -99,7 +94,6 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.9</version>
 		</dependency>
 		<dependency>
 			<groupId>me.kagura</groupId>
