--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>注册检测服务</description>
 
 	<properties>
+		<start-class>com.jisucloud.clawler.regagent.RegAgentApplication</start-class>
 		<skipTests>true</skipTests>
 		<java.version>1.8</java.version>
 		<kotlin.version>1.3.30</kotlin.version>
@@ -147,6 +148,21 @@
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<maimClass>com.jisucloud.clawler.regagent.RegAgentApplication</maimClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
