--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8888
 
 spring.redis.database=7
-spring.redis.host=127.0.0.1
+spring.redis.host=120.132.14.104
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=jisuyun2018@1123
