--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8888
 
 spring.redis.database=7
-spring.redis.host=120.132.14.104
-spring.redis.port=6379
-spring.redis.password=jisuyun2018@1123
+spring.redis.host=120.132.22.65
+spring.redis.port=6380
+spring.redis.password=jisucloud
