--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,7 @@ spring.redis.database=7
 spring.redis.host=120.132.22.65
 spring.redis.port=6380
 spring.redis.password=jisucloud
+spring.redis.pool.max-active=200  
+spring.redis.pool.max-wait=6000
+spring.redis.pool.max-idle=10 
+spring.redis.pool.min-idle=0 
