--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>2.21</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>23.0</version>
@@ -155,43 +160,6 @@
 		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
 		<plugins>
-			<!-- 协程插件 -->
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId> <!-- Run with "mvn compile maven-dependency-plugin:properties exec:exec" -->
-				<configuration>
-					<mainClass>testgrp.QuasarHelloWorld</mainClass>
-					<workingDirectory>target/classes</workingDirectory>
-					<executable>java</executable>
-					<arguments>
-						<!-- Turn off before production -->
-						<argument>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argument>
-						<!-- Quasar Agent -->
-						<argument>-javaagent:${co.paralleluniverse:quasar-core:jar}</argument>
-						<!-- Classpath -->
-						<argument>-classpath</argument>
-						<classpath />
-						<!-- Main class -->
-						<argument>testgrp.QuasarIncreasingEchoApp</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-			<!-- 要在测试期间运行quasar代理 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-					<argLine>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argLine>
-					<!-- Quasar Agent -->
-					<argLine>-javaagent:${co.paralleluniverse:quasar-core:jar}</argLine>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -205,7 +173,6 @@
 						</goals>
 					</execution>
 				</executions>
-
 			</plugin>
 		</plugins>
 		<pluginManagement>
