--- a/pom.xml
+++ b/pom.xml
@@ -18,27 +18,14 @@
 		<java.version>12.0.2</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<pigx.version>1.6.2</pigx.version>
 		<spring-boot.version>2.0.4.RELEASE</spring-boot.version>
-		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
-		<spring-platform.version>Cairo-SR3</spring-platform.version>
+		<!-- kotlin增量编译 -->
+		<kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<kotlin.version>1.2.20</kotlin.version>
 		<maven.compiler.source>12</maven.compiler.source>
 		<maven.compiler.target>12</maven.compiler.target>
-		<monitor.version>2.0.2</monitor.version>
-		<hutool.version>4.1.13</hutool.version>
-		<mybatis-plus.version>3.0.2</mybatis-plus.version>
-		<kaptcha.version>0.0.9</kaptcha.version>
-		<swagger.version>2.9.2</swagger.version>
-		<elastic-job.version>2.0.0</elastic-job.version>
-		<curator.version>2.10.0</curator.version>
-		<velocity.version>1.7</velocity.version>
-		<lcn.version>4.1.0</lcn.version>
-		<jasypt.version>2.1.0</jasypt.version>
-		<elastic-job-lite.version>2.1.5</elastic-job-lite.version>
-		<security.oauth.version>2.3.3.RELEASE</security.oauth.version>
-		<jackson.modules>2.9.6</jackson.modules>
-		<docker.url>http://192.168.0.13:4243</docker.url>
-		<registry.url>192.168.0.13:5000</registry.url>
 	</properties>
 
 	<dependencies>
@@ -48,17 +35,14 @@
 			<artifactId>spiderbase</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/co.paralleluniverse/quasar-core -->
-		<dependency>
-			<groupId>co.paralleluniverse</groupId>
-			<artifactId>quasar-core</artifactId>
-			<version>0.8.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.module</groupId>
-			<artifactId>jackson-module-kotlin</artifactId>
-		</dependency>
+		<!-- <dependency> <groupId>org.jetbrains.kotlin</groupId> <artifactId>kotlin-stdlib-jre8</artifactId> 
+			</dependency> <dependency> <groupId>org.jetbrains.kotlin</groupId> <artifactId>kotlin-reflect</artifactId> 
+			</dependency> <dependency> <groupId>com.fasterxml.jackson.module</groupId> 
+			<artifactId>jackson-module-kotlin</artifactId> </dependency> <dependency> 
+			<groupId>org.jetbrains.kotlinx</groupId> <artifactId>kotlinx-coroutines-core</artifactId> 
+			<version>1.3.0-M1</version> </dependency> <dependency> <groupId>org.jetbrains.kotlinx</groupId> 
+			<artifactId>kotlinx-coroutines-jdk8</artifactId> <version>1.3.0-M1</version> 
+			</dependency> -->
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -124,6 +108,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- <plugin> <artifactId>kotlin-maven-plugin</artifactId> <groupId>org.jetbrains.kotlin</groupId> 
+				<configuration> <compilerPlugins> <plugin>spring</plugin> </compilerPlugins> 
+				<jvmTarget>12</jvmTarget> </configuration> <executions> <execution> <id>compile</id> 
+				<phase>compile</phase> <goals> <goal>compile</goal> </goals> </execution> 
+				<execution> <id>test-compile</id> <phase>test-compile</phase> <goals> <goal>test-compile</goal> 
+				</goals> </execution> </executions> <dependencies> <dependency> <groupId>org.jetbrains.kotlin</groupId> 
+				<artifactId>kotlin-maven-allopen</artifactId> </dependency> </dependencies> 
+				</plugin> -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -145,25 +137,6 @@
 				<plugin>
 					<groupId>pl.project13.maven</groupId>
 					<artifactId>git-commit-id-plugin</artifactId>
-				</plugin>
-				<plugin>
-					<groupId>com.spotify</groupId>
-					<artifactId>docker-maven-plugin</artifactId>
-					<version>0.4.12</version>
-					<configuration>
-						<imageName>${registry.url}/${project.name}:0.0.1</imageName>
-						<dockerHost>${docker.url}</dockerHost>
-						<dockerDirectory>${project.basedir}</dockerDirectory>
-						<resources>
-							<resource>
-								<targetPath>/</targetPath>
-								<directory>${project.build.directory}</directory>
-								<include>${project.build.finalName}.jar</include>
-							</resource>
-						</resources>
-						<serverId>docker-hub</serverId>
-						<registryUrl>https://index.docker.io/v1/</registryUrl>
-					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
