--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-# 线上通过Jenkins发版会强制使用prod
 spring.profiles.active=prod
 logging.level.root=INFO
+
+#鍚敤shutdown
+endpoints.shutdown.enabled=true
+#绂佺敤瀵嗙爜楠岃瘉
+endpoints.shutdown.sensitive=false
